--- a/about.qmd
+++ b/about.qmd
@@ -3,7 +3,7 @@ title: "What is ICPMF?"
 format: html
 ---
 
-The **International Committee on Predictive Modelling in Food** (ICPMF) was founded on 12 September 2011 in Dublin during the **ICPMF-7 conference*. Since 2014, ICPMF is a subcommittee of The International Committee on Food Microbiology and Hygiene (ICFMH), and through this link, is now under the umbrella of the International Union of Microbiological Societies (IUMS).
+The **International Committee on Predictive Modelling in Food** (ICPMF) was founded on 12 September 2011 in Dublin during the **ICPMF-7 conference**. Since 2014, ICPMF is a subcommittee of The International Committee on Food Microbiology and Hygiene (ICFMH), and through this link, is now under the umbrella of the International Union of Microbiological Societies (IUMS).
 
 
 ## GOALS
@@ -15,7 +15,7 @@ To foster the development and use of mathematical modelling in food science
 
 ### Food Safety and Quality
 
-To Improve Food Safety and Quality and Food Process Optimization through transferring the Know-How on Predictive Model to the different levels along the Food Chains
+To Improve Food Safety and Quality and Food Process Optimisation through transferring the Know-How on Predictive Model to the different levels along the Food Chains
 
 ### Predictive Modeller Community
 
@@ -29,6 +29,6 @@ To develop educational programmes to train scientists, academia and food profess
 ### Objectives
 
 - Promote the development and application of predictive mathematical models for microbiological, chemical, and physical behavior in food products.
-- Improve food safety and quality by optimizing processes using predictive tools.
-- Foster a community of predictive modelers through collaboration and knowledge sharing.
+- Improve food safety and quality by optimising processes using predictive tools.
+- Foster a community of predictive modellers through collaboration and knowledge sharing.
 - Provide educational programs and training on predictive modelling for food professionals.
