--- a/young-members.qmd
+++ b/young-members.qmd
@@ -3,16 +3,21 @@ title: "Young ICPMF"
 format: html
 ---
 
+## 📜 Objectives of yICPMF
+
+TBA
+
+## 🧑 Current yICPMF members
+
+TBA
+
 ## 📜 yICPMF Bylaws
 
-<iframe src="files/yICPMF-bylaws.pdf" width="100%" height="300px" style="border: none;"></iframe>
 
-## 🧑‍🔬 Become a Member
+[📄 View or Download yICPMF Bylaws (PDF)](files/yICPMF-bylaws.pdf){target=_blank}
 
-If you are interested in becoming a **member** of the **Young Researcher Group (yICPMF)**  on Predictive Modelling in Food, fill out the on-line form.
 
-<iframe src="files/ApplicationForm-yICPMF.pdf" width="100%" height="300px" style="border: none;"></iframe>
+## 🧑 🔬 Become a Member
 
-## 💬 Slack Group
+If you are interested in becoming a **member** of the **Young ICPMF**, contact: yicpmf@gmail.com
 
-Tutorial of the ICPMF Young Scientists Slack group. This is a platform to bring the Predictive Modeller Community together, in particular students and early career scientists, by making communication easier and connecting newcomers and seniors. In the “predictive-μbio” workspace, anyone can ask questions, propose activities, courses or topics for discussion, share their research and work on their research projects.
