--- a/tools.qmd
+++ b/tools.qmd
@@ -5,30 +5,65 @@ format: html
 
 A collection of relevant predictive modelling tools and software (programming codes, spreadsheets, websites, etc.) is presented in this section, providing a concise description, access link, and files. If you do not find your software application or any other indispensable tools, please let us know, and send the information. The list will be updated as soon as possible.
 
-## 🔬 [Pathogens In Foods](https://pif.esa.ipb.pt/)
+## [ComBase](https://combase.errc.ars.usda.gov/)
+
+An online relational database of records that quantitatively describe the growth and inactivation of pathogenic and spoilage microorganisms in food environments. The software also includes a suite of broth- and food-based models, as well as data-fitting tools. The initiative is a collaboration between the Tasmanian Institute of Agriculture and the USDA-Agricultural Research Service.
+
+## [CardinalFit](https://ubarron.shinyapps.io/CardinalFit/)
+
+“CardinalFit: Fitting Cardinal Models” is a Shiny dashboard designed to fit cardinal parameter models, which are secondary models that describe the growth rate of microorganisms as a function of extrinsic and/or intrinsic factors. These are models that estimate the optimum growth rate, and the minimum, optimum and maximum values of extrinsic and intrinsic factors (e.g. temperature, pH, water activity), which characterise the growth of a given microbial strain.
+
+
+## [Cardinal_Model_Broth](https://vcadavez.shinyapps.io/ListeriaCardinalModel)
+
+The web application “Meta-analysed cardinal parameter model of *Listeria monocytogenes* in broth” is a shiny dashboard of a meta-analysed cardinal parameter model of *Listeria monocytogenes* growth in broth, built upon the results from over 2000 growth experiments. The app. displays cardinal parameter graphs and estimates growth rate values at a given temperature, pH and water activity. Documentation of the meta-analysis model can be found at: [https://doi.org/10.1016/j.foodres.2020.109476](https://doi.org/10.1016/j.foodres.2020.109476).
+
+## 🔬 [Database Pathogens In Foods](https://pif.esa.ipb.pt/)
 
 [Pathogens-in-Foods is a database](https://pif.esa.ipb.pt/) of systematically formatted occurrence data of the most important biological hazards in foods randomly surveyed from European farms, processing facilities, retail establishments and restauration.
 
 Under a harmonised arrangement, Pathogens-in-Foods brings together prevalence and enumeration data of pathogenic bacteria, parasites and viruses in foods, extracted from published peer-reviewed articles and reports.
 
-## [MicroHibro](https://microhibro.com/)
+## [FDA-iRISK](https://www.foodrisk.org/resources/display/2)
 
-An online toolbox to assess quantitatively the risk of pathogenic and spoilage microorganisms in a variety of food commodities, by including predictive models, dose-response models, stochastic models. The software includes a tool for assessing and designing sampling plan and derive risk metrics such as Food Safety Objectives and Performance Objectives.
+An interactive, web-based risk assessment tool developed by the U.S. Food and Drug Administration to inform prioritization and intervention decisions about food safety. Through built-in functions and automated features, FDA-iRISK enables users to rank risks from multiple microbial and chemical hazards more efficiently, as well as predicting the effectiveness of potential solutions.
 
 ## [Food Spoilage and Safety Predictor (FSSP)](http://fssp.food.dtu.dk/)
 
 A standalone software for the prediction of the shelf-life and growth of bacteria in different fresh and lightly preserved meat, dairy and seafood products. It can be used also when the effect of product temperature profiles recorded over time by data loggers.
 
-## [ComBase](https://combase.errc.ars.usda.gov/)
+## [MicroHibro](https://microhibro.com/)
 
-An online relational database of records that quantitatively describe the growth and inactivation of pathogenic and spoilage microorganisms in food environments. The software also includes a suite of broth- and food-based models, as well as data-fitting tools. The initiative is a collaboration between the Tasmanian Institute of Agriculture and the USDA-Agricultural Research Service.
+An online toolbox to assess quantitatively the risk of pathogenic and spoilage microorganisms in a variety of food commodities, by including predictive models, dose-response models, stochastic models. The software includes a tool for assessing and designing sampling plan and derive risk metrics such as Food Safety Objectives and Performance Objectives.
 
+## [Microrisk Lab](https://www.microrisklab.top/)
+
+Microrisk Lab is an R-based online freeware for predictive microbiology, with its core function being the parameter estimation and model simulation of microbial behaviours such as growth and inactivation. The platform integrates up to 36 peer-reviewed mathematical models, covering primary models under static and non-isothermal conditions, secondary models describing the influence of environmental factors on specific growth rates, and competitive growth models for two microflora populations, supporting both deterministic and stochastic simulations. 
+
+## [PredMicro](https://vcadavez.shinyapps.io/PredMicro/)
+
+“PredMicro: Fitting Predictive Microbial Models” is a Shiny application tool designed to support the fitting of the most widely used predictive microbiology primary growth models. These are models that describe microbial concentration as a function of time at constant environmental conditions.
 
 ## [Sym'Previus](http://symprevius.eu/en/)
 
 A decision support software tool for predicting bacterial growth, growth/no growth boundaries and thermal inactivation. It also contains microbiological data-fitting tools. The software makes it possible to take into account variability inherent to food products, processes and micro-organisms.
 
-## [FDA-iRISK](https://www.foodrisk.org/resources/display/2)
+## [WHO R package: qraLm](https://github.com/WorldHealthOrganization/qraLm)
 
-An interactive, web-based risk assessment tool developed by the U.S. Food and Drug Administration to inform prioritization and intervention decisions about food safety. Through built-in functions and automated features, FDA-iRISK enables users to rank risks from multiple microbial and chemical hazards more efficiently, as well as predicting the effectiveness of potential solutions.
+qraLm is an R package for quantitative risk assessment of *Listeria monocytogenes* in foods, which was developed by the World Health Organization in the framework of the JEMRA Expert Meetings *Listeria monocytogenes* in foods, part 1 and 2. In addition to the modular functions for each processing stage of RTE seafood, frozen vegetables and RTE cantaloupe, the qraLm package contains a built-in Shiny app allowing users to interactively simulate risk assessments for different food types and contamination scenarios.
+
+## [USDA Integrated Pathogen Modeling Program (USDA-IPMP)](https://www.ars.usda.gov/northeast-area/wyndmoor-pa/eastern-regional-research-center/docs/ipmp-2013/)
+
+USDA-IPMP is a standalone data analysis software tool that is compiled the Windows operating system. It can be saved to any directory and is ready to work once it is self-extracted. No installation is needed. It is developed for kinetic parameters estimation (inverse analysis) of the most common primary and secondary models in predictive microbiology. It is designed with user-friendly graphical interfaces to direct the users to analyse individual curves of bacterial growth or survival (primary models) and effect of temperature on growth or survival rates (secondary models). Following the tutorial, users can easily analyse the curves without programming, allowing anyone, with basic knowledge of predictive microbiology, to determine the parameters of an observed curve.
+
+## [USDA IPMP-Global Fit](https://www.ars.usda.gov/northeast-area/wyndmoor-pa/eastern-regional-research-center/docs/ipmp-global-fit/)
+
+USDA IPMP-Global Fit is developed on top of USDA IPMP, but it is designed for one-step kinetic analysis of isothermal growth or survival curves to minimise residual errors during parameters estimation (inverse analysis). USDA IPMP-Global Fit is designed to analyse both primary and secondary models of multiple growth or survival curves at the same time (one-step) to determine the kinetic parameters. It is also a standalone software tool with user-friendly graphical interfaces. Once downloaded to a local drive (hard drive or USB), it can be self-extracted and executable.  No installation is needed. It is suitable for more advanced users of predictive microbiology.
+
+## [USDA IPMP – Dynamic Prediction](https://www.ars.usda.gov/northeast-area/wyndmoor-pa/eastern-regional-research-center/docs/ipmp-dynamic-prediction/)
+
+USDA IPMP – Dynamic Prediction is also developed on top of USDA IPMP, but it is developed as a predictive tool (for direct analysis). It is also a self-extractable file and can work from any local drive.  No installation is needed. It is specifically developed to predict the growth of foodborne pathogens under dynamically changing temperature conditions, but it is also capable for predicting bacterial growth and survival under constant temperature conditions.  It is also built with user-friendly graphical interfaces to allow users to make predictions based on a time-temperature history. All models in USDA IPMP – Dynamic Prediction have been validated in the laboratory.
+
+
+
 
